--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "@invoice/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "serve-angular": "nx run Angular:serve",
+    "serve-nest": "nx run Nest:serve",
+    "serve-invoice": "nx run Angular:with-api"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~19.0.0",
+    "@angular/cdk": "^19.0.4",
     "@angular/common": "~19.0.0",
     "@angular/compiler": "~19.0.0",
     "@angular/core": "~19.0.0",
@@ -13,7 +18,26 @@
     "@angular/platform-browser": "~19.0.0",
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.2",
+    "@primeng/themes": "^19.0.1",
+    "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "mysql2": "^3.11.5",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.1",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "typeorm": "^0.3.20",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -24,12 +48,17 @@
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/angular": "20.2.2",
     "@nx/eslint": "20.2.2",
     "@nx/eslint-plugin": "20.2.2",
     "@nx/jest": "20.2.2",
-    "@nx/js": "20.2.2",
+    "@nx/js": "20.3.0",
+    "@nx/nest": "20.3.0",
+    "@nx/node": "20.3.0",
     "@nx/web": "20.2.2",
+    "@nx/webpack": "20.3.0",
     "@nx/workspace": "20.2.2",
     "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
@@ -37,12 +66,15 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "@types/passport-jwt": "^4.0.1",
     "@typescript-eslint/utils": "^8.13.0",
     "angular-eslint": "^19.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.2.2",
     "prettier": "^2.6.2",
@@ -50,6 +82,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.13.0",
+    "webpack-cli": "^5.1.4"
   }
 }
